--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -17,7 +17,7 @@
 
       <!--<div class="text-center">@oksyassine</div>-->
       <div class="text-center">
-        <a href="https://github.com/oksyassine/kafka-mongo-sync">Source Code</a>
+        <a href="https://github.com/oksyassine/YARLOMIA">Source Code</a>
       </div>
     </div>
   </div>
