--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -9,13 +9,12 @@
              class="img-responsive center-block"
              style="max-height:300px;padding-bottom:50px;max-width:100%;" />
       </div>
-
+      <!--
       <div class="text-center">Developed by:</div>
       <div class="text-center">
         <h3>Oukassou Yassine</h3>
       </div>
-
-      <!--<div class="text-center">@oksyassine</div>-->
+      <div class="text-center">@oksyassine</div>-->
       <div class="text-center">
         <a href="https://github.com/oksyassine/YARLOMIA">Source Code</a>
       </div>
