--- a/src/app/users/user-list.component.css
+++ b/src/app/users/user-list.component.css
@@ -1,3 +1,45 @@
 thead {
   color: #337AB7;
 }
+table {
+  width: 100%;
+}
+
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-diagram {
+  min-width: 140px;
+  border: 1.5px solid black;
+  padding: 10px;
+  padding-bottom: 5px;
+  font-weight: lighter;
+  margin: 14px 0;
+  margin-left: 10%;
+  height: 104px;
+}
+
+.example-element-symbol {
+  font-weight: bold;
+  width: 80;
+  line-height: normal;
+}
+
