--- a/src/app/users/user-list.component.html
+++ b/src/app/users/user-list.component.html
@@ -8,13 +8,14 @@
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
 </mat-form-field>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="imageUrl">
+  <ng-container matColumnDef="pic">
     <th mat-header-cell *matHeaderCellDef> IMAGE </th>
-    <td mat-cell *matCellDef="let element"><img *ngIf='showImage'
-      [src]='element.imageUrl'
+
+    <td mat-cell *matCellDef="let element">
+        <img *ngIf='showImage'
+      [src]='sanatizeUrl(element.pic)'
       [title]='element.firstName'
       [style.width.px]='imageWidth'
       [style.margin.px]='imageMargin'>  </td>
@@ -22,24 +23,65 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+    <th mat-header-cell *matHeaderCellDef> FIRST NAME </th>
+    <td mat-cell *matCellDef="let element">
+      <a [routerLink]="['/users', element._id]">
+      {{element.firstName}} </a></td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef> last </th>
-    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+    <th mat-header-cell *matHeaderCellDef> LAST NAME </th>
+    <td mat-cell *matCellDef="let element">               <a [routerLink]="['/users', element._id]">{{element.lastName}} </a></td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="cin">
-    <th mat-header-cell *matHeaderCellDef> cin </th>
-    <td mat-cell *matCellDef="let element"> {{element.cin}} </td>
+    <th mat-header-cell *matHeaderCellDef> CIN </th>
+    <td mat-cell *matCellDef="let element"> <a [routerLink]="['/users', element._id]">{{element.cin}} </a></td>
+  </ng-container>
+
+
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef> ADDRESS </th>
+    <td mat-cell *matCellDef="let element"><a [routerLink]="['/users', element._id]"> {{element.address}} </a></td>
+  </ng-container>
+
+  <ng-container matColumnDef="sexe">
+    <th mat-header-cell *matHeaderCellDef> GENDRE </th>
+    <td mat-cell *matCellDef="let element"> <a [routerLink]="['/users', element._id]">{{element.sexe}} </a></td>
+  </ng-container>
+
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+      <div class="example-element-detail"
+           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div class="example-element-diagram">
+
+          <div class='col-md-2'>
+
+          <div class="example-element-symbol">  <img *ngIf='showImage'
+            [src]='sanatizeUrl(element.pic)'
+            [title]='element.firstName'
+            [style.width.px]='imageWidth'
+            [style.margin.px]='imageMargin'> </div>
+          </div>
+            <div class='col-md-8'>
+
+            <div class="example-element-name"> {{element.firstName}} </div>
+          </div>
+        </div>
+      </div>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+      class="example-element-row"
+      [class.example-expanded-row]="expandedElement === element"
+      (click)="expandedElement = expandedElement === element ? null : element">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
   <!-- Row shown when there is no matching data. -->
   <tr class="mat-row" *matNoDataRow>
