--- a/src/app/r-form/dynamic-form-question.component.html
+++ b/src/app/r-form/dynamic-form-question.component.html
@@ -1,6 +1,4 @@
-﻿
-      <div [formGroup]="form">
-
+﻿      <div [formGroup]="form">
 
         <div [ngSwitch]="question.controlType" >
           <mat-form-field  class="example-full-width">
@@ -19,14 +17,4 @@
           </mat-form-field>
         </div>
 
-        <!--<div class="errorMessage" *ngIf="!isValid">{{question.label}} is required</div>-->
       </div>
-
-
-      <!--
-      Copyright Google LLC. All Rights Reserved.
-      Use of this source code is governed by an MIT-style license that
-      can be found in the LICENSE file at http://angular.io/license
-      -->
-
-
