--- a/src/app/users/user-list.component.html
+++ b/src/app/users/user-list.component.html
@@ -3,94 +3,102 @@
     {{pageTitle}}
   </div>
   <div class='card-body'>
-<mat-form-field>
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-</mat-form-field>
+    <div *ngIf="Users && Users.length;then contenu_bon else contenu_pas_bon"></div>
+    <ng-template #contenu_bon>
+      <mat-form-field *ngIf='Users && Users.length'>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8" *ngIf='Users && Users.length'>
 
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+        <ng-container matColumnDef="pic">
+          <th mat-header-cell *matHeaderCellDef> IMAGE </th>
 
-  <ng-container matColumnDef="pic">
-    <th mat-header-cell *matHeaderCellDef> IMAGE </th>
-
-    <td mat-cell *matCellDef="let element">
-        <img *ngIf='showImage'
-      [src]='sanatizeUrl(element.pic)'
-      [title]='element.firstName'
-      [style.width.px]='imageWidth'
-      [style.margin.px]='imageMargin'>  </td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef> FIRST NAME </th>
-    <td mat-cell *matCellDef="let element">
-      <a [routerLink]="['/users', element._id]">
-      {{element.firstName}} </a></td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef> LAST NAME </th>
-    <td mat-cell *matCellDef="let element">               <a [routerLink]="['/users', element._id]">{{element.lastName}} </a></td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="cin">
-    <th mat-header-cell *matHeaderCellDef> CIN </th>
-    <td mat-cell *matCellDef="let element"> <a [routerLink]="['/users', element._id]">{{element.cin}} </a></td>
-  </ng-container>
-
-
-  <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef> ADDRESS </th>
-    <td mat-cell *matCellDef="let element"><a [routerLink]="['/users', element._id]"> {{element.address}} </a></td>
-  </ng-container>
-
-  <ng-container matColumnDef="sexe">
-    <th mat-header-cell *matHeaderCellDef> GENDRE </th>
-    <td mat-cell *matCellDef="let element"> <a [routerLink]="['/users', element._id]">{{element.sexe}} </a></td>
-  </ng-container>
-
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="example-element-diagram">
-
-          <div class='col-md-2'>
-
-          <div class="example-element-symbol">  <img *ngIf='showImage'
+          <td mat-cell *matCellDef="let element" >
+              <img *ngIf='showImage'
             [src]='sanatizeUrl(element.pic)'
             [title]='element.firstName'
             [style.width.px]='imageWidth'
-            [style.margin.px]='imageMargin'> </div>
-          </div>
-            <div class='col-md-8'>
+            [style.margin.px]='imageMargin'> </td>
+        </ng-container>
 
-            <div class="example-element-name"> {{element.firstName}} </div>
-          </div>
-        </div>
+        <!-- Name Column -->
+        <ng-container matColumnDef="firstName">
+          <th mat-header-cell *matHeaderCellDef> FIRST NAME </th>
+          <td mat-cell *matCellDef="let element">
+            <a [routerLink]="['/users', element._id]">
+            {{element.firstName}} </a></td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="lastName">
+          <th mat-header-cell *matHeaderCellDef> LAST NAME </th>
+          <td mat-cell *matCellDef="let element">               <a [routerLink]="['/users', element._id]">{{element.lastName}} </a></td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="cin">
+          <th mat-header-cell *matHeaderCellDef> CIN </th>
+          <td mat-cell *matCellDef="let element"> <a [routerLink]="['/users', element._id]">{{element.cin}} </a></td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef> ADDRESS </th>
+          <td mat-cell *matCellDef="let element"><a [routerLink]="['/users', element._id]"> {{element.address}} </a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="sexe">
+          <th mat-header-cell *matHeaderCellDef> GENDRE </th>
+          <td mat-cell *matCellDef="let element"> <a [routerLink]="['/users', element._id]">{{element.sexe}} </a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+            <div class="example-element-detail"
+                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+              <div class="example-element-diagram">
+
+                <div class='col-md-2'>
+
+                <div class="example-element-symbol">  <img *ngIf='showImage'
+                  [src]='sanatizeUrl(element.pic)'
+                  [title]='element.firstName'
+                  [style.width.px]='imageWidth'
+                  [style.margin.px]='imageMargin'> </div>
+                </div>
+                  <div class='col-md-8'>
+
+                  <div class="example-element-name"> {{element.firstName}} </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === element"
+            (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+      </table>
+      <div *ngIf='errorMessage'
+           class='alert alert-danger'>
+        Error: {{ errorMessage }}
       </div>
-    </td>
-  </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let element; columns: displayedColumns;"
-      class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      (click)="expandedElement = expandedElement === element ? null : element">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    </ng-template>
+    <ng-template #contenu_pas_bon>
+      <div class="alert alert-secondary" role="alert" >
+        no citizents to show    </div>
+    </ng-template>
 
-  <!-- Row shown when there is no matching data. -->
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-  </tr>
-</table>
-  </div>
-</div>
-<div *ngIf='errorMessage'
-     class='alert alert-danger'>
-  Error: {{ errorMessage }}
+
 </div>
