--- a/src/app/users/user-list.component.css
+++ b/src/app/users/user-list.component.css
@@ -43,3 +43,16 @@ tr.example-element-row:not(.example-expanded-row):active {
   line-height: normal;
 }
 
+.example-loading-shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 30% 30%;
+  bottom: 56px;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
