--- a/src/app/users/user-list.component.html
+++ b/src/app/users/user-list.component.html
@@ -22,7 +22,6 @@
             [style.margin.px]='imageMargin'> </td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="firstName">
           <th mat-header-cell *matHeaderCellDef> FIRST NAME </th>
           <td mat-cell *matCellDef="let element">
@@ -30,13 +29,11 @@
             {{element.firstName}} </a></td>
         </ng-container>
 
-        <!-- Weight Column -->
         <ng-container matColumnDef="lastName">
           <th mat-header-cell *matHeaderCellDef> LAST NAME </th>
           <td mat-cell *matCellDef="let element">               <a [routerLink]="['/users', element._id]">{{element.lastName}} </a></td>
         </ng-container>
 
-        <!-- Symbol Column -->
         <ng-container matColumnDef="cin">
           <th mat-header-cell *matHeaderCellDef> CIN </th>
           <td mat-cell *matCellDef="let element"> <a [routerLink]="['/users', element._id]">{{element.cin}} </a></td>
@@ -62,7 +59,7 @@
                 <div class='col-md-2'>
 
                 <div class="example-element-symbol">  <img *ngIf='showImage'
-                  [src]='sanatizeUrl(element.pic)'
+                  [src]='sanatizeUrl(element.bio)'
                   [title]='element.firstName'
                   [style.width.px]='imageWidth'
                   [style.margin.px]='imageMargin'> </div>
@@ -84,21 +81,24 @@
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
-        <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
         </tr>
       </table>
-      <div *ngIf='errorMessage'
-           class='alert alert-danger'>
-        Error: {{ errorMessage }}
-      </div>
+     
 
     </ng-template>
     <ng-template #contenu_pas_bon>
-      <div class="alert alert-secondary" role="alert" >
+      <div class="example-loading-shade"
+      *ngIf="isLoadingResults ">
+   <mat-spinner *ngIf='!errorMessage && isLoadingResults'></mat-spinner>
+      </div>
+      <div class="alert alert-secondary" role="alert" *ngIf='!errorMessage && !isLoadingResults' >
         no citizents to show    </div>
     </ng-template>
-
-
+    <div *ngIf='errorMessage'
+    class='alert alert-danger'>
+     Error: {{ errorMessage }}
+     </div>
+  </div>
 </div>
